--- a/3dgs/ref.bib
+++ b/3dgs/ref.bib
@@ -9,4 +9,23 @@
   keywords={Kernel;Surface reconstruction;Image reconstruction;Low pass filters;Surface texture;Rendering (computer graphics);Anisotropic magnetoresistance;Filtering;Surface emitting lasers;Image quality},
   doi={10.1109/TVCG.2002.1021576}}
 
+@Article{kerbl3Dgaussians,
+      author       = {Kerbl, Bernhard and Kopanas, Georgios and Leimk{\"u}hler, Thomas and Drettakis, George},
+      title        = {3D Gaussian Splatting for Real-Time Radiance Field Rendering},
+      journal      = {ACM Transactions on Graphics},
+      number       = {4},
+      volume       = {42},
+      month        = {July},
+      year         = {2023},
+      url          = {https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/}
+}
 
+@misc{ye2023mathematicalsupplementtextttgsplatlibrary,
+      title={Mathematical Supplement for the $\texttt{gsplat}$ Library}, 
+      author={Vickie Ye and Angjoo Kanazawa},
+      year={2023},
+      eprint={2312.02121},
+      archivePrefix={arXiv},
+      primaryClass={cs.MS},
+      url={https://arxiv.org/abs/2312.02121}, 
+}
